Projet total/Assembleur/tests/bad/testfile-bad-mov-3.ms
; can't move an immediate into memory
mov (%rax) 42